--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -26,8 +26,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:textColor="@color/BLUE"
-                android:textSize="25sp"
-                android:layout_marginTop="5dp"
+                android:textSize="25dp"
+                android:layout_marginTop="3dp"
                 android:layout_marginLeft="20dp"
                 android:layout_weight="1"
                 android:text="@string/app_news_slogan"/>
@@ -35,7 +35,7 @@
             <ImageButton
                 android:id="@+id/search_Button"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:src="@drawable/ic_search" />
 
         </LinearLayout>
