--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -31,15 +31,17 @@
             android:id="@+id/line_chart_for_trend"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_marginVertical="7dp"
-            android:layout_above="@+id/seekBar1" />
+            android:layout_above="@+id/area_switch_button" />
 
         <com.github.mikephil.charting.charts.BarChart
             android:id="@+id/bar_char_for_total"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_marginVertical="7dp"
-            android:layout_above="@+id/seekBar1" >
+            android:layout_above="@+id/line_chart_for_trend" >
 
         </com.github.mikephil.charting.charts.BarChart>
     </LinearLayout>
