--- a/app/src/main/res/layout/entity_card.xml
+++ b/app/src/main/res/layout/entity_card.xml
@@ -12,26 +12,40 @@
 
 
     <LinearLayout
+        android:id="@+id/entity_card_linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_marginVertical="5dp">
+        android:layout_marginVertical="5dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/entity_name_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center_vertical"
+            android:layout_weight="1"
             android:text="TextView"
             android:textSize="25sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/load_first_child_button"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            app:srcCompat="@drawable/load_more_button"/>
+            app:srcCompat="@drawable/load_more_button" />
+
     </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/entity_may_gone_relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:visibility="gone">
+
+        <include layout="@layout/entity_first_child_card" />
+
+    </RelativeLayout>
+
 
 </androidx.cardview.widget.CardView>
