--- a/app/src/main/res/layout/fragment_graph.xml
+++ b/app/src/main/res/layout/fragment_graph.xml
@@ -21,6 +21,7 @@
         </SearchView>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/entity_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
