--- a/app/src/main/res/layout/entity_first_child_card.xml
+++ b/app/src/main/res/layout/entity_first_child_card.xml
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/imgNews"
+                    android:id="@+id/imgEntity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|center_horizontal"
