--- a/app/src/main/res/layout/fragment_graph.xml
+++ b/app/src/main/res/layout/fragment_graph.xml
@@ -14,18 +14,26 @@
         android:layout_marginHorizontal="10dp">
 
         <SearchView
+            android:id="@+id/search_entity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="7dp">
 
         </SearchView>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/entity_recyclerView"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_marginVertical="3dp"/>
+            android:layout_weight="1">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/entity_recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="3dp"
+                 />
+        </RelativeLayout>
+
     </LinearLayout>
 
 </FrameLayout>
