--- a/app/src/main/res/layout/entity_card.xml
+++ b/app/src/main/res/layout/entity_card.xml
@@ -38,7 +38,8 @@
                 android:id="@+id/load_first_child_button"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                app:srcCompat="@drawable/ic_more" />
+                app:srcCompat="@drawable/ic_more"
+                android:background="@color/transparent"/>
 
         </LinearLayout>
 
@@ -103,6 +104,7 @@
                                 android:layout_marginTop="2dp"
                                 android:adjustViewBounds="true"
                                 android:contentDescription="@string/imageview_placeholder"
+                                android:background="@color/transparent"
                                 android:maxHeight="150dp" />
 
                         </RelativeLayout>
@@ -131,6 +133,7 @@
                             android:id="@+id/load_more_relations"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
+                            android:background="@color/transparent"
                             app:srcCompat="@drawable/ic_more" />
 
                     </LinearLayout>
@@ -194,6 +197,7 @@
                             android:id="@+id/load_more_properties"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
+                            android:background="@color/transparent"
                             app:srcCompat="@drawable/ic_more" />
                     </LinearLayout>
 
