--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -36,6 +36,7 @@
                 android:id="@+id/search_Button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:background="@color/transparent"
                 android:src="@drawable/ic_search" />
 
         </LinearLayout>
@@ -110,7 +111,6 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:orientation="vertical"
-                    android:visibility="visible"
                     tools:layout_editor_absoluteY="683dp"
                     tools:visibility="visible" />
             </androidx.constraintlayout.widget.ConstraintLayout>
