--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,10 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="BLUE">#0000FF</color>
 
-    <color name="cardBackgroundColor">#DDF2FF</color> <!--light light blue-->
-    <color name="second_cardBackgroundColor">#F0F0F8</color> <!--light light gray-->
+    <color name="transparent">#00000000</color>
+
+    <color name="cardBackgroundColor">#EEF8FF</color> <!--light light blue-->
+    <color name="second_cardBackgroundColor">#F8F8FF</color> <!--light light gray-->
     <color name="titleItemUnselColor">#000000</color>
     <color name="titleItemSelColor">#5d5d5d</color>
     <color name="abstractItemUnselColor">#5d5d5d</color>
