--- a/app/src/main/res/layout/fragment_experts.xml
+++ b/app/src/main/res/layout/fragment_experts.xml
@@ -6,25 +6,18 @@
     tools:context=".ExpertsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="战疫学者" />
 
-        <com.scwang.smart.refresh.layout.SmartRefreshLayout
-            android:id="@+id/refreshLayout"
-            android:background="@android:color/white"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
-            <com.scwang.smart.refresh.header.ClassicsHeader
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="战疫学者" />-->
+
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/expert_list"
@@ -34,12 +27,7 @@
                     tools:layout_editor_absoluteY="683dp"
                     tools:visibility="visible" />
 
-            <com.scwang.smart.refresh.footer.ClassicsFooter
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </com.scwang.smart.refresh.layout.SmartRefreshLayout>
 
-
-    </LinearLayout>
+    </RelativeLayout>
 
 </FrameLayout>
